--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>THOTLI SAI HITESH REDDY</h3>
-        <h3>21BDS0264</h3>
+    <h3>saandeep</h3>
+        <h3>21BCE2885</h3>
     <center>
         <h1>Index page</h1>
         
