--- a/index.html
+++ b/index.html
@@ -1,76 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h3>saandeep</h3>
-        <h3>21BCE2885</h3>
-    <center>
-        <h1>Index page</h1>
-        
-        <table border="1" width="500">
-            <tr>
-                <th colspan="2">HTML TASKS</th>
-            </tr>
-            <tr>
-                <th>Task Number</th>
-                <th>Link</th>
-            </tr>
-            
-            <tr>
-                <td>Task-1 HTML</td>
-                <td><a href="file:///C:/Users/saihi/Desktop/html%20codes/Task-1.html">Link1</a></td>
-            </tr>
-            <tr>
-                <td>Task-2 HTML</td>
-                <td><a href="file:///C:/Users/saihi/Desktop/html%20codes/Task-2.html">Link2</a></td>
-            </tr>
-            <tr>
-                <td>Task-3 HTML</td>
-                <td><a href="file:///C:/Users/saihi/Desktop/html%20codes/Task-3.html">Link3</a></td>
-            </tr>
-            <tr>
-                <td>Task-4 HTML</td>
-                <td><a href="file:///C:/Users/saihi/Desktop/html%20codes/Task-4.html">Link4</a></td>
-            </tr>
-            <tr>
-                <td>Task-5 HTML</td>
-                <td><a href="file:///C:/Users/saihi/Desktop/html%20codes/Task-5.html">Link5</a></td>
-            </tr>
-            <tr>
-                <td>Task-1 CSS</td>
-                <td><a href="file:///C:/Users/saihi/Desktop/html%20codes/Task-1%20CSS.html">Link6</a></td>
-            </tr>
-            <tr>
-                <td>Task-2 CSS</td>
-                <td><a href="file:///C:/Users/saihi/Desktop/html%20codes/Task-2%20CSS.html">Link7</a></td>
-            </tr>
-            <tr>
-                <td>Task-3 CSS</td>
-                <td><a href="file:///C:/Users/saihi/Desktop/html%20codes/Task-3%20CSS.html">Link8</a></td>
-            </tr>
-            <tr>
-                <td>Task-4 CSS</td>
-                <td><a href="file:///C:/Users/saihi/Desktop/html%20codes/Task-4%20CSS.html">Link9</a></td>
-            </tr>
-            <tr>
-                <td>Task-5 CSS</td>
-                <td><a href="file:///C:/Users/saihi/Desktop/html%20codes/Task-5%20CSS.html">Link10</a></td>
-            </tr>
-            <tr>
-                <td>Task-6 CSS</td>
-                <td><a href="file:///C:/Users/saihi/Desktop/html%20codes/Task-6%20CSS.html">Link11</a></td>
-            </tr>
-            <tr>
-                <td>Task-7 CSS</td>
-                <td><a href="file:///C:/Users/saihi/Desktop/html%20codes/Task-7%20CSS.html">Link12</a></td>
-            </tr>
+  </head>
+  <body>
+    <h1><center>HTML Tasks</center></h1>
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>Link</th>
+      </tr>
+      <tr>
+        <th>&emsp;&emsp;Task-1&emsp;&emsp;</th>
+        <th>&emsp;&emsp;<a href="./task1.html">Click Here</a>&emsp;&emsp;</th>
+      </tr>
+      <tr>
+        <th>Task-2</th>
+        <th><a href="./task2.html">Click Here</a></th>
+      </tr>
+      <tr>
+        <th>Task-3</th>
+        <th><a href="./task3.html">Click Here</a></th>
+      </tr>
+      <tr>
+        <th>Task-4</th>
+        <th><a href="./task4.html">Click Here</a></th>
+      </tr>
+      <tr>
+        <th>Task-5</th>
+        <th><a href="./task5.html">Click Here</a></th>
+      </tr>
+    </table>
 
-        </table>
-    </center>
-</body>
+    <h1><center>CSS Tasks</center></h1>
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>Link</th>
+      </tr>
+      <tr>
+        <th>&emsp;&emsp;Task-1&emsp;&emsp;</th>
+        <th><a href="./task1css.html">Click Here</a></th>
+      </tr>
+      <tr>
+        <th>Task-2</th>
+        <th>
+          &emsp;&emsp;<a href="./task2css.html">Click Here</a>&emsp;&emsp;
+        </th>
+      </tr>
+      <tr>
+        <th>Task-3</th>
+        <th><a href="./task3css.html">Click Here</a></th>
+      </tr>
+      <tr>
+        <th>Task-4</th>
+        <th><a href="./task4css.html">Click Here</a></th>
+      </tr>
+      <tr>
+        <th>Task-5</th>
+        <th><a href="./task5css.html">Click Here</a></th>
+      </tr>
+      <tr>
+        <th>Task-6</th>
+        <th><a href="./task6css.html">Click Here</a></th>
+      </tr>
+      <tr>
+        <th>Task-7</th>
+        <th><a href="./task7css.html">Click Here</a></th>
+      </tr>
+    </table>
+
+    <style>
+      table,
+      tr,
+      th {
+        border: 1px solid black;
+        border-collapse: collapse;
+      }
+      table {
+        margin: auto;
+        padding: auto;
+      }
+    </style>
+  </body>
 </html>
-
